--- a/.github/workflows/flutter_cd.yml
+++ b/.github/workflows/flutter_cd.yml
@@ -1,10 +1,11 @@
-name: Flutter CI
+name: Flutter CD
 
-on: [push]
-
+on:
+  push:
+    tags:        
+      - v*
 jobs:
   build:
-
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
@@ -21,8 +22,13 @@ jobs:
       run: flutter test
     - name: Flutter build apk
       run: flutter build apk
-    - name: Push APK to Releases
-      uses: ncipollo/release-action@v1
-      with:
-        artifacts: "build/app/outputs/apk/release/*.apk"
-        token: ${{ secrets.GITHUB_TOKEN }}
+
+  release:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Push APK to Releases
+        uses: ncipollo/release-action@v1
+        with:
+          artifacts: "build/app/outputs/apk/release/*.apk"
+          token: ${{ secrets.GITHUB_TOKEN }}
