--- a/.github/workflows/deploy_web.yml
+++ b/.github/workflows/deploy_web.yml
@@ -17,9 +17,8 @@ jobs:
     - run: flutter config --enable-web
     - run: flutter create .
     - run: flutter build web
-    - name: Deploy
-      uses: JamesIves/github-pages-deploy-action@releases/v3
+    - uses: JamesIves/github-pages-deploy-action@releases/v3
       with:
         ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
-        BRANCH: master
+        BRANCH: gh-pages
         FOLDER: build/web
